# four-cheb-critcoll

./: .gitignore  CMakeLists.txt  README.md  null_vector_5.5D.txt  null_vector_6.1D_2.txt  null_vector_6.2D.txt
include/: EOMevaluator.hpp  NewtonSolver.hpp  Sampler.hpp  SimulationConfig.hpp  SpectralTransformer.hpp  StatePacker.hpp  common.hpp
sample_data/: 5.5D_Data.h5  data_128_8D.h5  data_out.h5
src/: EOMevaluator.cpp  NewtonSolver.cpp  Sampler.cpp  SpectralTransformer.cpp  StatePacker.cpp  common.cpp  main.cpp
